videoserver-HMW2/k8s/production/network_policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default.vms
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: vms
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
    - podSelector:
        matchLabels:
          app: vs-db
    - podSelector:
        matchLabels:
          app: vps
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    - podSelector:
        matchLabels:
          app: nginx
    - podSelector:
        matchLabels:
          app: vs-db
    - podSelector:
        matchLabels:
          app: vps
    ports:
    - protocol: TCP
      port: 8080
